# kids-music-panel-project

./: .gitignore  CLAUDE.md  README.md
src/remote-control/: CMakeLists.txt  README.md
src/remote-control/main/: # Kids Music Panel - RFID Remote Control.md  ARCHITECTURE.md  CMakeLists.txt  gpio_example_main.c  logs.txt  main.c  media_mapping.c  media_mapping.h
src/remote-control/main/common/: app_events.c  app_events.h  board_pins.h  config.h
src/remote-control/main/display/: display.c  display.h  display_controller.c  display_controller.h
src/remote-control/main/input/: buttons.c  buttons.h  potentiometer.c  potentiometer.h
src/remote-control/main/music_assistant/: music_assistant_client.c  music_assistant_client.h  music_assistant_controller.c  music_assistant_controller.h
src/remote-control/main/rfid/: rfid_scanner.c  rfid_scanner.h
src/remote-control/main/soft_power/: soft_power.c  soft_power.h
src/remote-control/main/wifi/: wifi_controller.c  wifi_controller.h  wifi_manager.c  wifi_manager.h
src/remote-controller/: .gitignore  CMakeLists.txt
src/remote-controller/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  media_mapping.c
